// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomPanel should initially render two buttons with an empty heart 1`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: 1px solid #A3BAC3;
  border-left: none none #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-heart"
  />
</button>
`;

exports[`BottomPanel should initially render two buttons with an empty heart 2`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: none none #A3BAC3;
  border-left: 1px solid #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-heart"
  />
</button>
`;

exports[`BottomPanel should render properly 1`] = `
<DocumentFragment>
  .c1 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: 1px solid #A3BAC3;
  border-left: none none #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c1:disabled {
  color: #aaa;
}

.c2 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: none none #A3BAC3;
  border-left: 1px solid #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  cursor: pointer;
}

.c2:disabled {
  color: #aaa;
}

.c3 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: none none #A3BAC3;
  border-left: none none #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c3:disabled {
  color: #aaa;
}

.c0 {
  text-align: center;
  font-size: 20px;
  margin: 0 0.4rem;
}

<div
    class="c0"
  >
    <button
      class="c1"
      disabled=""
      role="button"
      tabindex="0"
      type="button"
    >
      <i
        class="icon-heart"
      />
    </button>
    <button
      class="c2"
      disabled=""
      role="button"
      tabindex="0"
      type="button"
    >
      <i
        class="icon-heart"
      />
    </button>
    <button
      class="c3"
      disabled=""
      role="button"
      tabindex="0"
      type="button"
    >
      <i
        class="icon-comment"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Dislike button should toggle Like button filled heart into an empty heart after click on it 1`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: 1px solid #A3BAC3;
  border-left: none none #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-heart"
  />
</button>
`;

exports[`Dislike button should toggle an empty heart into filled heart after click on it 1`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: none none #A3BAC3;
  border-left: 1px solid #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-heart-filled"
  />
</button>
`;

exports[`Like button should toggle Dislike button filled heart into an empty heart after click on it 1`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: none none #A3BAC3;
  border-left: 1px solid #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-heart"
  />
</button>
`;

exports[`Like button should toggle an empty heart into filled heart after click on it 1`] = `
.c0 {
  background: transparent;
  border: none;
  display: inline-block;
  width: 33%;
  border-right: 1px solid #A3BAC3;
  border-left: none none #A3BAC3;
  color: #3d73bf;
  font-size: 1.25rem;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  cursor: pointer;
}

.c0:disabled {
  color: #aaa;
}

<button
  class="c0"
  role="button"
  tabindex="0"
  type="button"
>
  <i
    class="icon-heart-filled"
  />
</button>
`;
